# swagger.json
@@ -275,6 +275,112 @@
                     }
                 }
             }
+        },
+        "/books/:bookId/:bookId": {
+            "patch": {
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Add book's review",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "bookId",
+                        "required": true,
+                        "type": "string",
+                        "description": "book's id"
+                    }
+                ],
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "requestBody": {
+                    "description": "Review's object",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ReviewRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ReviewResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request (invalid request body)",
+                        "content": {}
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {}
+                    }
+                }
+            }
+        },
+        "/books/:bookId/status": {
+            "patch": {
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Update book's status",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "bookId",
+                        "required": true,
+                        "type": "string",
+                        "description": "book's id"
+                    }
+                ],
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "requestBody": {
+                    "description": "Status object",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StatusRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/StatusResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request (invalid request body)",
+                        "content": {}
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {}
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -415,6 +521,26 @@
                         "type": "string",
                         "description": "Number of pages",
                         "example": "123"
+                    },
+                    "rating": {
+                        "type": "integer",
+                        "nullable": true,
+                        "description": "book's rating"
+                    },
+                    "review": {
+                        "type": "string",
+                        "nullable": true,
+                        "description": "Book's review"
+                    },
+                    "status": {
+                        "type": "string",
+                        "description": "Book's status",
+                        "example": "going"
+                    },
+                    "_id": {
+                        "type": "string",
+                        "description": "Book's id",
+                        "example": "6543hfj34"
                     }
                 }
             },
@@ -423,6 +549,11 @@
                 "items": {
                     "type": "object",
                     "properties": {
+                        "_id": {
+                            "type": "string",
+                            "description": "Book's id",
+                            "example": "6543hfj34"
+                        },
                         "title": {
                             "type": "string",
                             "description": "Book's name",
@@ -443,9 +574,145 @@
                             "description": "Number of pages",
                             "example": "123"
                         },
+                        "rating": {
+                            "type": "integer",
+                            "description": "book's rating",
+                            "example": "4"
+                        },
+                        "review": {
+                            "type": "string",
+                            "description": "Book's review",
+                            "example": "Good"
+                        },
                         "status": {
-                            "type": "uncertain"
+                            "type": "string",
+                            "description": "Book's status",
+                            "example": "already"
                         }
+                    }
+                }
+            },
+            "ReviewRequest": {
+                "type": "object",
+                "required": [
+                    "rating",
+                    "review"
+                ],
+                "properties": {
+                    "rating": {
+                        "type": "integer",
+                        "description": "Book's rating",
+                        "example": 4
+                    },
+                    "review": {
+                        "type": "string",
+                        "description": "Book's review",
+                        "example": "Pretty good"
+                    }
+                }
+            },
+            "ReviewResponse": {
+                "type": "object",
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "description": "Book's name",
+                        "example": "About mango"
+                    },
+                    "author": {
+                        "type": "string",
+                        "description": "Book's author",
+                        "example": "Mango"
+                    },
+                    "year": {
+                        "type": "string",
+                        "description": "Book's year",
+                        "example": "1993"
+                    },
+                    "pages": {
+                        "type": "string",
+                        "description": "Number of pages",
+                        "example": "123"
+                    },
+                    "rating": {
+                        "type": "integer",
+                        "description": "book's rating",
+                        "example": "4"
+                    },
+                    "review": {
+                        "type": "string",
+                        "description": "Book's review",
+                        "example": "Pretty good"
+                    },
+                    "status": {
+                        "type": "string",
+                        "description": "Book's status",
+                        "example": "going"
+                    },
+                    "_id": {
+                        "type": "string",
+                        "description": "Book's id",
+                        "example": "6543hfj34"
+                    }
+                }
+            },
+            "StatusRequest": {
+                "type": "object",
+                "required": [
+                    "status"
+                ],
+                "properties": {
+                    "Status": {
+                        "type": "string",
+                        "description": "Book's status",
+                        "example": "already"
+                    }
+                }
+            },
+            "StatusResponse": {
+                "type": "object",
+                "properties": {
+                    "title": {
+                        "type": "string",
+                        "description": "Book's name",
+                        "example": "About mango"
+                    },
+                    "author": {
+                        "type": "string",
+                        "description": "Book's author",
+                        "example": "Mango"
+                    },
+                    "year": {
+                        "type": "string",
+                        "description": "Book's year",
+                        "example": "1993"
+                    },
+                    "pages": {
+                        "type": "string",
+                        "description": "Number of pages",
+                        "example": "123"
+                    },
+                    "rating": {
+                        "type": "integer",
+                        "nullable": true,
+                        "description": "book's rating",
+                        "example": "4"
+                    },
+                    "review": {
+                        "type": "string",
+                        "nullable": true,
+                        "description": "Book's review",
+                        "example": "Pretty good"
+                    },
+                    "status": {
+                        "type": "string",
+                        "description": "Book's status",
+                        "example": "already"
+                    },
+                    "_id": {
+                        "type": "string",
+                        "description": "Book's id",
+                        "example": "6543hfj34"
                     }
                 }
             }
